--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,15 @@ jobs:
           cd flask-app
           python -m unittest || echo "No test found"
 
-      # 5. Build Docker image
+      # 5. Log in to Dockerhub
+      - name: Log in to Dockerhub
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | dockerlogin -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      # 6. Build Docker image
       - name: Build Docker image
         run: docker build -t ${{ secrets.DOCKER_REPO }}:latest .
+
+      # 7. Push Docker image
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKER_REPO }}:latest
