--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,3 +45,13 @@ jobs:
       # 7. Push Docker image
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKER_REPO }}:latest
+
+      # 8. Debug step -
+      - name: Debug secret value
+        run: |
+          if [ -z "${{ secrets.DOCKER_REPO }}" ]; then
+            echo "DOCKER_REPO IS EMPTY"
+            exit 1
+          else
+            echo "DOCKER_REPO = ${{ secrets.DOCKER_REPO }}"
+          fi
