--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
 
       # 6. Build Docker image
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_REPO }}:latest .
+        run: docker build -t ${{ secrets.DOCKER_REPO }}:latest ./flask-app
 
       # 7. Push Docker image
       - name: Push Docker image
