--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,3 +36,11 @@ jobs:
       # 5. Build Docker image
       - name: Build Docker image
         run: docker build -t ${{ secrets.DOCKER_REPO }}:latest ./flask-app
+
+      # 6. Log in to Dockerhub
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      # 7. Push the Docker image to DockerHub
+      - name: Push image to Docker Hub
+        run: docker push ${{ secrete.DOCKER_REPO }}:latest
