--- a/flask-system-insight/Dockerfile
+++ b/flask-system-insight/Dockerfile
@@ -1,15 +1,14 @@
 FROM python:3.11-slim
 
 WORKDIR /app
-
-# Copy only requirements first for better caching
 COPY requirements.txt .
-
 RUN pip install --no-cache-dir -r requirements.txt
 
-# copy app after installing deps
-COPY app.py .
+COPY . .
 
 EXPOSE 5000
 
+HEALTHCHECK CMD curl --fail http://localhost:5000/health || exit 1
+
 CMD ["python", "app.py"]
+
