Docker login problem

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
 
       # 5. Build Docker image
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/flask-system-insight:latest .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}flask-ci-cd:latest .
 
       # 6. Log in to Dockerhub
       - name: Log in to Docker Hub
@@ -39,4 +39,4 @@ jobs:
 
       # 7. Push the Docker image to DockerHub
       - name: Push image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/flask-system-insight:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/flask-ci-cd:latest
